# CMakeIssue17573

./: README.md
Sources/: CMakeLists.txt  README.md  foo.cpp
Sources/cmake/: CMakeLists.txt
Sources/cmake/Hunter/: HunterGate.cmake
cmake/Hunter/: config.cmake
